--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
@@ -69,6 +69,9 @@ hr {
 
 .task-header{
     margin: 1rem 0rem;
+    .row{
+        align-items: center;
+    }
 }
 .pb-cmnt-textarea {
     border-radius: 10px;
@@ -81,5 +84,13 @@ hr {
 }
 
 .info-row {
-    margin-top: 15px;
+    margin-top: 5px;
+}
+
+.description,.attachments {
+    background-color: #FBFBF9;
+    border-radius: 10px;    
+    border: solid 2px rgba(52,52,52,.1);
+    min-height: 100px;
+    padding: 10px;
 }
