--- a/frontend/src/app/modules/task/components/new-task-modal/new-task-modal.component.html
+++ b/frontend/src/app/modules/task/components/new-task-modal/new-task-modal.component.html
@@ -1,9 +1,10 @@
 <div class="modal-header">
   <h4 class="modal-title pull-left">{{editMode ? "Edit": "Create"}} Task</h4>
-  <button type="button" class="close pull-right" aria-label="Close" (click)="_closeModal()">
+  <button type="button" class="close pull-right" aria-label="Close" (click)="onClose()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+
 <div class="modal-body">
   <form [formGroup]="newTaskForm">
     <div class="form-group">
@@ -36,9 +37,7 @@
       <div *ngIf="submmited && f.estimation.errors" class="invalid-feedback">
         <div *ngIf="f.estimation.errors.required">>>required</div>
       </div>
-    </div>
-
-   
+    </div>   
 
     <div class="form-group" *ngIf="role">
       <label for="inputState">Priority</label>
@@ -54,12 +53,14 @@
     <div class="form-group">
       <label for="inputState">Assignee</label>
       <select class="form-control" formControlName="assignee">
+        <option [value]="authService.currentUsername">Me</option>
         <option *ngFor="let user of users" [value]="user.username">{{user.username}}</option>
       </select>
-    </div>
+    </div>    
   </form>
 </div>
+
 <div class="modal-footer">
-  <button class="btn btn btn-primary" [disabled]="newTaskForm.invalid" (click)="_onSubmit()">Save</button>
-  <button class="btn btn-danger" (click)="_onClose()">Close</button>
+  <button class="btn btn btn-primary" [disabled]="newTaskForm.invalid" (click)="onSubmit()">Save</button>
+  <button class="btn btn-danger" (click)="onClose()">Close</button>
 </div>
