--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
@@ -2,7 +2,7 @@
   <div class="table-title">
     <div class="row">
       <div class="col-sm-7">
-          <button type="button" class="btn btn-primary" (click)="_openProjectModal()">New Project</button>             					
+          <button type="button" class="btn btn-primary" (click)="onNewProjectClick()">New Project</button>             					
       </div>           
     </div>
   </div>
