--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
@@ -7,6 +7,9 @@
       }
       margin: 10px;
     }
+    .task-header{
+      min-width: 50px;
+    }
     select {
       width: 200px;
     }
@@ -55,5 +58,10 @@
         }
       }
     }
+  }
+
+  .no-content{
+    font-size: 1.5rem;
+    margin-top: 25px;
   }
   
