--- a/frontend/src/app/modules/layout/header/header.component.html
+++ b/frontend/src/app/modules/layout/header/header.component.html
@@ -7,7 +7,7 @@
       {{username}}<span class="caret"></span>
     </a>
     <ul id="dropdown-alignment" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-alignment">
-      <li role="menuitem"><a class="dropdown-item" (click)="viewUserProfile()" href="javascript:void(0);">Edit profile</a></li>
+      <li role="menuitem"><a class="dropdown-item" (click)="viewUserProfile()" href="javascript:void(0);">Profile</a></li>
       <li class="divider dropdown-divider"></li>
       <li role="menuitem"><a class="dropdown-item" href="#" (click)="logOut()">Logout</a>
       </li>
