--- a/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
+++ b/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
@@ -8,29 +8,34 @@
   <form [formGroup]="formGroup">
     <div class="form-group">
       <label>Project Code</label>
-      <input class="form-control" formControlName="projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }"/>
+      <input class="form-control" formControlName="projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }" />
       <div *ngIf="submmited && f.projectCode.errors" class="invalid-feedback">
         <div *ngIf="f.projectCode.errors.required">>>required</div>
+        <div *ngIf="f.projectCode.errors.minlength">>>minimum lenght 3 symbol</div>
+        <div *ngIf="f.projectCode.errors.maxlength">>>maximum lenght 10 symbol</div>
       </div>
-    </div>   
+    </div>
     <div class="form-group">
       <label>Project Name</label>
-      <input class="form-control" formControlName="name" [ngClass]="{'is-invalid': submmited && f.name.errors }"/>
+      <input class="form-control" formControlName="name" [ngClass]="{'is-invalid': submmited && f.name.errors }" />
       <div *ngIf="submmited && f.name.errors" class="invalid-feedback">
         <div *ngIf="f.name.errors.required">>>required</div>
+        <div *ngIf="f.name.errors.minlength">>>minimum lenght 3 symbol</div>
+        <div *ngIf="f.name.errors.maxlength">>>maximum lenght 30 symbol</div>
       </div>
-    </div>    
+    </div>
     <div class="form-group">
       <label>Summary</label>
       <textarea class="form-control" formControlName="summary" [ngClass]="{'is-invalid': submmited && f.summary.errors }"></textarea>
       <div *ngIf="submmited && f.summary.errors" class="invalid-feedback">
-          <div *ngIf="f.summary.errors.required">>>required</div>
+        <div *ngIf="f.summary.errors.required">>>required</div>
+        <div *ngIf="f.summary.errors.minlength">>>minimum lenght 3 symbol</div>
+        <div *ngIf="f.summary.errors.maxlength">>>maximum lenght 100 symbol</div>
       </div>
-    </div>    
+    </div>
   </form>
 </div>
 <div class="modal-footer">
   <div class="btn btn btn-primary" (click)="_onSubmit()">{{editMode ? "Edit": "Create"}}</div>
   <div class="btn btn-danger" (click)="modalRef.hide()">Close</div>
 </div>
-
