--- a/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.html
+++ b/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.html
@@ -4,6 +4,7 @@
       <tr>
         <td><a (click)="onSortClick('id')">Task <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('title')">Title <i class="icon-sort"></i></a></td>
+        <td><a>Assignee</a></td>
         <td><a (click)="onSortClick('priority')">Priority <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('taskStatus')">Satuts <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('estimation')">time est. <i class="icon-sort"></i></a></td>
@@ -14,6 +15,7 @@
       <tr *ngFor="let task of tasks" (click)="onTaskClick(task.id)">
         <td>{{task.id}}</td>
         <td>{{task.title}} </td>
+        <td>{{task.assignee}} </td>
         <td>
           <app-task-priority-view [priority]="task.priority">
           </app-task-priority-view>
