--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
@@ -2,11 +2,12 @@
   <table class="table table-striped table-sm table-responsive-sm table-borderless">
     <thead>
       <tr>
-        <td><a (click)="onSortClick('id')">Task <i class="icon-sort"></i></a></td>
+        <td class="task-header"><a (click)="onSortClick('id')">Task <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('title')">Title <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('priority')">Priority <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('taskStatus')">Satuts <i class="icon-sort"></i></a></td>
         <td><a (click)="onSortClick('dueDate')">Due Date <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('updated')">update <i class="icon-sort"></i></a></td>
       </tr>
     </thead>
     <tbody>
@@ -22,6 +23,7 @@
           </app-task-status-view>
         </td>
         <td>{{task.dueDate | date:'MMM d'}}</td>
+        <td>{{task.updated | date:'MMM d'}}</td>
       </tr>
     </tbody>
   </table>
@@ -33,6 +35,6 @@
     </div>
   </div>
 </div>
-<div *ngIf="!checkTasks">
+<div *ngIf="!checkTasks" class="text-center w-100 no-content">
   There are no available tasks
 </div>
